--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on: workflow_dispatch
 jobs:
   build:
 
-    runs-on: ubuntu.-latest
+    runs-on: ubuntu-latest
     timeout-minutes: 9999
 
     steps:
