--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       run: sudo apt-get install -y openssh-server screen cpulimit pwgen 
     - name: Setup SSH
       run: | 
-        sudo chpasswd < echo "root:toor"
+        echo "root:toor"|sudo passwd
         sudo mkdir -p /var/run/sshd
         echo "PermitRootLogin yes" >> /etc/ssh/sshd_config
         echo "PasswordAuthentication yes" >> /etc/ssh/sshd_config
