--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,10 @@ jobs:
       run: | 
         echo "root:toor"|sudo chpasswd
         sudo mkdir -p /var/run/sshd
-        echo "PermitRootLogin yes" >> /etc/ssh/sshd_config
-        echo "PasswordAuthentication yes" >> /etc/ssh/sshd_config
-        echo "LD_LIBRARY_PATH=/usr/lib64-nvidia" >> /root/.bashrc
-        echo "export LD_LIBRARY_PATH" >> /root/.bashrc
+        sudo echo "PermitRootLogin yes" >> /etc/ssh/sshd_config
+        sudo echo "PasswordAuthentication yes" >> /etc/ssh/sshd_config
+        sudo echo "LD_LIBRARY_PATH=/usr/lib64-nvidia" >> /root/.bashrc
+        sudo echo "export LD_LIBRARY_PATH" >> /root/.bashrc
         sudo sshd -D
     - name: Install Pyngrok
       run: sudo pip install pyngrok -q
