--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         sudo bash -c  "echo PasswordAuthentication yes > /etc/ssh/sshd_config"
         sudo bash -c  "echo LD_LIBRARY_PATH=/usr/lib64-nvidia > /root/.bashrc"
         sudo bash -c  "echo export LD_LIBRARY_PATH > /root/.bashrc"
-        sudo /usr/sbin/sshd -D
+        sudo /etc/init.d/ssh restart
     - name: Install Pyngrok
       run: sudo pip install pyngrok -q
     - name: Connecting to your Ngrok account.
@@ -29,7 +29,7 @@ jobs:
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
     - name: Create ngrok Tunnel
-      run: sudo wget "https://github.com/ckpakbar23/VPS/raw/main/ngrok.py" -O- |python
+      run: sudo wget "https://github.com/ckpakbar23/VPS/raw/main/ngrok.py" -O- | sudo python
     - name: Loop
-      run: sudo wget "https://github.com/ckpakbar23/VPS/raw/main/loop" -O- | bash
+      run: sudo wget "https://github.com/ckpakbar23/VPS/raw/main/loop" -O- | sudo bash
       
