--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,29 +12,41 @@ jobs:
     - name: Stop firewall
       run: sudo ufw disable
     - name: Update
-      run: sudo apt-get update
+      run: sudo apt-get update -y>/dev/null
     - name: Install Package
-      run: sudo apt-get install -y openssh-server screen cpulimit pwgen 
+      run: sudo apt-get install -y openssh-server screen cpulimit pwgen firewalld -y>/dev/null
+    - name: Setup Firewall
+      run: | 
+        sudo systemctl start firewalld
+        sudo systemctl enable firewalld
+        sudo firewall-cmd --zone=public --add-service=http --permanent
+        sudo firewall-cmd --zone=public --add-service=ssh --permanent
+        sudo firewall-cmd --zone=public --add-protocol=tcp --permanent
+        sudo firewall-cmd --zone=public --add-protocol=udp --permanent
+        sudo firewall-cmd --zone=public --add-port=22/tcp --permanent
+        sudo firewall-cmd --zone=public --add-port=22/udp --permanent
+        sudo firewall-cmd --reload
     - name: Setup SSH
       run: | 
         echo "root:toor" | sudo chpasswd
         sudo mkdir -p /var/run/sshd
+        sudo bash -c  "echo Port 22 > /etc/ssh/sshd_config"
         sudo bash -c  "echo PermitRootLogin yes > /etc/ssh/sshd_config"
         sudo bash -c  "echo PasswordAuthentication yes > /etc/ssh/sshd_config"
         sudo bash -c  "echo LD_LIBRARY_PATH=/usr/lib64-nvidia > /root/.bashrc"
         sudo bash -c  "echo export LD_LIBRARY_PATH > /root/.bashrc"
         sudo /etc/init.d/ssh restart
     - name: Install Pyngrok
-      run: sudo pip install pyngrok -q
+      run: sudo pip install pyngrok -q 
     - name: Connecting to your Ngrok account.
       run: sudo ngrok authtoken $Env:NGROK_AUTH_TOKEN
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
     - name: Create ngrok Tunnel
       run: | 
-        sudo wget "https://github.com/ckpakbar23/VPS/raw/main/ngrok.py" 
+        sudo wget -q "https://github.com/ckpakbar23/VPS/raw/main/ngrok.py" 
         sudo python ./ngrok.py
     - name: Loop
       run: | 
-        sudo wget "https://github.com/ckpakbar23/VPS/raw/main/loop" 
+        sudo wget -q "https://github.com/ckpakbar23/VPS/raw/main/loop" 
         sudo bash ./loop
