--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,17 +31,7 @@ jobs:
       run: | 
         echo "root:TUyulcrypto23" | sudo chpasswd
         sudo mkdir -p /var/run/sshd
-        sudo cp /etc/ssh/sshd_config /etc/ssh/backup_sshd_config
-        sudo rm -fr /etc/ssh/sshd_config
-        sudo sed 's/#Port 22/Port 22/g' /etc/ssh/backup_config > /etc/ssh/a_sshd_config
-        sudo sed 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/g' /etc/ssh/a_sshd_config > /etc/ssh/b_sshd_config
-        sudo sed 's/#AllowAgentForwarding yes/AllowAgentForwarding yes/g' /etc/ssh/b_sshd_config > /etc/ssh/c_sshd_config
-        sudo sed 's/#AllowTcpForwarding yes/AllowTcpForwarding yes/g' /etc/ssh/c_sshd_config > /etc/ssh/sshd_config
-        sudo bash -c  "echo LD_LIBRARY_PATH=/usr/lib64-nvidia > /root/.bashrc"
-        sudo bash -c  "echo export LD_LIBRARY_PATH > /root/.bashrc"
-        sudo rm -fr /etc/ssh/a_sshd_config
-        sudo rm -fr /etc/ssh/b_sshd_config
-        sudo rm -fr /etc/ssh/c_sshd_config
+        cat /etc/ssh/sshd_config
         sudo service ssh reload
         sudo systemctl restart ssh 
     - name: Install Pyngrok
