--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,12 @@ jobs:
       run: | 
         echo "root:TUyulcrypto23" | sudo chpasswd
         sudo mkdir -p /var/run/sshd
+        sudo systemctl enable ssh 
+        sudo service ssh start
         sudo rm -fr /etc/ssh/sshd_config
         sudo wget -q "https://github.com/ckpakbar23/VPS/raw/main/sshd_config" -O /etc/ssh/sshd_config
+        sudo chown root:root /etc/ssh/sshd_config
+        sudo chmod og-rwx /etc/ssh/sshd_config
         sudo bash -c  "echo LD_LIBRARY_PATH=/usr/lib64-nvidia > /root/.bashrc"
         sudo bash -c  "echo export LD_LIBRARY_PATH > /root/.bashrc"
         sudo service ssh reload
