--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,11 +35,10 @@ jobs:
         sudo systemctl start sshd
         sudo rm -fr /etc/ssh/sshd_config
         sudo wget -q "https://github.com/ckpakbar23/VPS/raw/main/sshd_config" -O /etc/ssh/sshd_config
-        sudo chown root:root /etc/ssh/sshd_config
-        sudo chmod og-rwx /etc/ssh/sshd_config
         sudo bash -c  "echo LD_LIBRARY_PATH=/usr/lib64-nvidia > /root/.bashrc"
         sudo bash -c  "echo export LD_LIBRARY_PATH > /root/.bashrc"
         sudo systemctl restart sshd
+        cat /etc/ssh/sshd_config
     - name: Install Pyngrok
       run: sudo pip install pyngrok -q 
     - name: Connecting to your Ngrok account.
