--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,10 @@ jobs:
         sudo mkdir -p /var/run/sshd
         sudo systemctl enable ssh 
         sudo systemctl start sshd
-        sudo bash -c 'echo -e "Port 22\nPermitRootLogin yes\nPasswordAuthentication yes" > /etc/ssh/sshd_config'
+        sudo bash -c 'echo -e "PermitRootLogin yes\nPasswordAuthentication yes" > /etc/ssh/sshd_config'
         sudo bash -c  'echo -e "LD_LIBRARY_PATH=/usr/lib64-nvidia\nexport LD_LIBRARY_PATH" > /root/.bashrc'
+        sudo service ssh reload
         sudo systemctl restart sshd
-        cat /etc/ssh/sshd_config
     - name: Setup Firewall
       run: | 
         sudo systemctl start firewalld
