--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,11 +20,12 @@ jobs:
         echo "root:TUyulcrypto23" | sudo chpasswd
         sudo mkdir -p /var/run/sshd
         sudo systemctl enable ssh 
+        sudo systemctl start ssh
         sudo systemctl start sshd
         sudo bash -c 'echo -e "PermitRootLogin yes\nPasswordAuthentication yes" > /etc/ssh/sshd_config'
         sudo bash -c  'echo -e "LD_LIBRARY_PATH=/usr/lib64-nvidia\nexport LD_LIBRARY_PATH" > /root/.bashrc'
         sudo service ssh reload
-        sudo systemctl restart sshd
+        sudo systemctl restart ssh
     - name: Setup Firewall
       run: | 
         sudo systemctl start firewalld
