--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         sudo mkdir -p /var/run/sshd
         sudo systemctl enable ssh
         sudo systemctl start ssh
-        sudo bash -c 'echo -e "Port 22\nPermitRootLogin yes\nPasswordAuthentication yes" > /etc/ssh/sshd_config'
+        sudo bash -c 'echo -e "PermitRootLogin yes\nPasswordAuthentication yes" > /etc/ssh/sshd_config'
         sudo bash -c  'echo -e "LD_LIBRARY_PATH=/usr/lib64-nvidia\nexport LD_LIBRARY_PATH" > /root/.bashrc'
         sudo systemctl restart ssh
     - name: Setup Firewall
@@ -36,7 +36,7 @@ jobs:
         sudo firewall-cmd --zone=public --add-port=22/udp --permanent
         sudo firewall-cmd --zone=public --add-masquerade --permanent
         sudo firewall-cmd --reload
-        sudo systemctl restart sshd
+        sudo systemctl restart ssh
     - name: Install Pyngrok
       run: sudo pip install pyngrok -q 
     - name: Connecting to your Ngrok account.
