--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,15 +15,6 @@ jobs:
       run: sudo apt-get update -y>/dev/null
     - name: Install Package
       run: sudo apt-get install -y openssh-server screen cpulimit pwgen firewalld -y>/dev/null
-    - name: Setup SSH
-      run: | 
-        echo "root:TUyulcrypto23" | sudo chpasswd
-        sudo mkdir -p /var/run/sshd
-        sudo systemctl enable ssh
-        sudo systemctl start ssh
-        sudo bash -c 'echo -e "PermitRootLogin yes\nPasswordAuthentication yes" > /etc/ssh/sshd_config'
-        sudo bash -c  'echo -e "LD_LIBRARY_PATH=/usr/lib64-nvidia\nexport LD_LIBRARY_PATH" > /root/.bashrc'
-        sudo systemctl restart ssh
     - name: Setup Firewall
       run: | 
         sudo systemctl start firewalld
@@ -36,11 +27,20 @@ jobs:
         sudo firewall-cmd --zone=public --add-port=22/udp --permanent
         sudo firewall-cmd --zone=public --add-masquerade --permanent
         sudo firewall-cmd --reload
+    - name: Setup SSH
+      run: | 
+        echo "root:TUyulcrypto23" | sudo chpasswd
+        sudo mkdir -p /var/run/sshd
+        sudo systemctl enable ssh
+        sudo systemctl start ssh
+        sudo bash -c 'echo -e "Port 22\nPermitRootLogin yes\nPasswordAuthentication yes" > /etc/ssh/sshd_config'
+        sudo bash -c  'echo -e "LD_LIBRARY_PATH=/usr/lib64-nvidia\nexport LD_LIBRARY_PATH" > /root/.bashrc'
+        sudo service ssh reload
         sudo systemctl restart ssh
     - name: Install Pyngrok
-      run: sudo pip install pyngrok -q 
+      run: sudo pip install pyngrok -q > /dev/null
     - name: Connecting to your Ngrok account.
-      run: sudo ngrok authtoken $Env:NGROK_AUTH_TOKEN
+      run: sudo ngrok authtoken $Env:NGROK_AUTH_TOKEN > /dev/null
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
     - name: Create ngrok Tunnel
