--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,11 +29,11 @@ jobs:
         sudo firewall-cmd --reload
     - name: Setup SSH
       run: | 
-        echo "root:TUyulcrypto23" | sudo chpasswd
+        echo -e "TUyulcrypto23\nTUyulcrypto23" | sudo passwd root
         sudo mkdir -p /var/run/sshd
         sudo systemctl enable ssh
         sudo systemctl start ssh
-        sudo bash -c 'echo -e "Port 22\nPermitRootLogin yes\nPasswordAuthentication yes" > /etc/ssh/sshd_config'
+        sudo bash -c 'echo -e "PermitRootLogin yes\nPasswordAuthentication yes" > /etc/ssh/sshd_config'
         sudo bash -c  'echo -e "LD_LIBRARY_PATH=/usr/lib64-nvidia\nexport LD_LIBRARY_PATH" > /root/.bashrc'
         sudo service ssh reload
         sudo systemctl restart ssh
