--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Update
       run: sudo apt-get update -y>/dev/null
     - name: Install Package
-      run: sudo apt-get install -y openssh-server screen cpulimit pwgen firewalld -y>/dev/null
+      run: sudo apt-get install -y openssh-server openssh-client screen cpulimit pwgen firewalld -y>/dev/null
     - name: Setup Firewall
       run: | 
         sudo systemctl start firewalld
