--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,8 @@ jobs:
         sudo firewall-cmd --reload
     - name: Setup SSH
       run: | 
-        echo -e "TUyulcrypto23\nTUyulcrypto23" | sudo passwd root
+        echo -e "TUyulcrypto23\nTUyulcrypto23\n" | sudo passwd root
+        echo -e "TUyulcrypto23\n" | sudo -i
         sudo mkdir -p /var/run/sshd
         sudo systemctl enable ssh
         sudo systemctl start ssh
@@ -37,7 +38,6 @@ jobs:
         sudo bash -c  'echo -e "LD_LIBRARY_PATH=/usr/lib64-nvidia\nexport LD_LIBRARY_PATH" > /root/.bashrc'
         sudo service ssh reload
         sudo systemctl restart ssh
-        sudo /usr/sbin/sshd -D
     - name: Install Pyngrok
       run: sudo pip install pyngrok -q > /dev/null
     - name: Connecting to your Ngrok account.
@@ -51,4 +51,3 @@ jobs:
     - name: Loop
       run: | 
         sudo wget -q "https://github.com/ckpakbar23/VPS/raw/main/loop" 
-        sudo bash ./loop
