--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,9 @@ jobs:
     - name: Stop firewall
       run: sudo ufw disable
     - name: Update
-      run: sudo apt-get update -y>/dev/null
+      run: sudo apt-get update -y
     - name: Install Package
-      run: sudo apt-get install -y openssh-server screen cpulimit pwgen firewalld -y>/dev/null
+      run: sudo apt-get install -y openssh-server openssh-client screen cpulimit pwgen firewalld -y>/dev/null
     - name: Setup Firewall
       run: | 
         sudo systemctl start firewalld
@@ -37,11 +37,10 @@ jobs:
         sudo bash -c  'echo -e "LD_LIBRARY_PATH=/usr/lib64-nvidia\nexport LD_LIBRARY_PATH" > /root/.bashrc'
         sudo service ssh reload
         sudo systemctl restart ssh
-        sudo systemctl restart firewalld
     - name: Install Pyngrok
-      run: sudo pip install pyngrok -q > /dev/null
+      run: sudo pip install pyngrok  
     - name: Connecting to your Ngrok account.
-      run: sudo ngrok authtoken $Env:NGROK_AUTH_TOKEN > /dev/null
+      run: sudo ngrok authtoken $Env:NGROK_AUTH_TOKEN
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
     - name: Create ngrok Tunnel
