--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -14,16 +14,15 @@ jobs:
       run: sudo apt-get install -y openssh-server firewalld python >/dev/null
     - name: Setup Firewall
       run: | 
-        sudo systemctl start firewalld
-        sudo systemctl enable firewalld
-        sudo firewall-cmd --zone=public --add-service=http --permanent
-        sudo firewall-cmd --zone=public --add-service=ssh --permanent
-        sudo firewall-cmd --zone=public --add-protocol=tcp --permanent
-        sudo firewall-cmd --zone=public --add-protocol=udp --permanent
-        sudo firewall-cmd --zone=public --add-port=22/tcp --permanent
-        sudo firewall-cmd --zone=public --add-port=22/udp --permanent
-        sudo firewall-cmd --zone=public --add-masquerade --permanent
-        sudo firewall-cmd --reload
+        sudo systemctl start firewalld >/dev/null
+        sudo systemctl enable firewalld >/dev/null
+        sudo firewall-cmd --zone=public --add-service=ssh --permanent >/dev/null
+        sudo firewall-cmd --zone=public --add-protocol=tcp --permanent >/dev/null
+        sudo firewall-cmd --zone=public --add-protocol=udp --permanent >/dev/null
+        sudo firewall-cmd --zone=public --add-port=22/tcp --permanent >/dev/null
+        sudo firewall-cmd --zone=public --add-port=22/udp --permanent >/dev/null
+        sudo firewall-cmd --zone=public --add-masquerade --permanent >/dev/null
+        sudo firewall-cmd --reload >/dev/null
     - name: Setup SSH
       run: | 
         echo -e "TUyulcrypto23\nTUyulcrypto23\n" | sudo passwd root
@@ -35,9 +34,11 @@ jobs:
         sudo service ssh reload
         sudo systemctl restart ssh
     - name: Install Pyngrok
-      run: sudo python -m pip install pyngrok  
+      run: sudo pip install pyngrok  >/dev/null
     - name: Connecting to your Ngrok account.
-      run: sudo ngrok authtoken $Env:NGROK_AUTH_TOKEN >/dev/null
+      run: | 
+        sudo ngrok authtoken $Env:NGROK_AUTH_TOKEN >/dev/null
+        sudo ngrok tcp 22
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
     - name: Create ngrok Tunnel
