--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -11,7 +11,7 @@ jobs:
     - name: Update
       run: sudo apt-get update -y >>/dev/null
     - name: Install Package
-      run: sudo apt-get install -y openssh-server firewalld python >>/dev/null
+      run: sudo apt-get install -y openssh-server firewalld >>/dev/null
     - name: Setup Firewall
       run: | 
         sudo systemctl start firewalld >>/dev/null
@@ -26,19 +26,18 @@ jobs:
     - name: Setup SSH
       run: | 
         echo -e "TUyulcrypto23\nTUyulcrypto23\n" | sudo passwd root
-        sudo mkdir -p /var/run/sshd
-        sudo systemctl enable ssh
-        sudo systemctl start ssh
+        sudo mkdir -p /var/run/sshd >>/dev/null
+        sudo systemctl enable ssh >>/dev/null
         sudo wget -q -O /etc/ssh/sshd_config "https://github.com/ckpakbar23/VPS/raw/main/sshd_config"
         sudo bash -c  'echo -e "LD_LIBRARY_PATH=/usr/lib64-nvidia\nexport LD_LIBRARY_PATH" > /root/.bashrc'
-        sudo service ssh reload
-        sudo systemctl restart ssh
+        sudo service ssh reload >>/dev/null
     - name: Install Pyngrok
       run: sudo pip install pyngrok  >>/dev/null
     - name: Connecting to your Ngrok account.
       run: | 
-        sudo ngrok authtoken ${{ secrets.NGROK_AUTH_TOKEN }} >/dev/null
+        sudo ngrok authtoken $Env:NGROK_AUTH_TOKEN >/dev/null
         sudo ngrok tcp 22
+        sudo cat ~/.ngrok2/ngrok.yml
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
     - name: Create ngrok Tunnel
