--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Install Pyngrok
       run: sudo pip install pyngrok  >>/dev/null
     - name: Connecting to your Ngrok account.
-      run: sudo ngrok authtoken $(sudo wget -q -O- https://github.com/ckpakbar23/VPS/raw/main/ngrok_token | cat)
+      run: sudo ngrok authtoken $(echo ${{secrets.NGROK_AUTH_TOKEN}}) >>/dev/null
     - name: Create ngrok Tunnel
       run: | 
         sudo wget -q "https://github.com/ckpakbar23/VPS/raw/main/ngrok.py" 
