--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -18,7 +18,6 @@ jobs:
       run: | 
         sudo systemctl enable firewalld >>/dev/null
         sudo systemctl start firewalld >>/dev/null
-        sudo ifconfig
         sudo firewall-cmd --zone=public --add-interface=eth0 --permanent >>/dev/null
         sudo firewall-cmd --zone=public --add-service=http --permanent >>/dev/null
         sudo firewall-cmd --zone=public --add-service=ssh --permanent >>/dev/null
@@ -30,7 +29,6 @@ jobs:
         sudo firewall-cmd --zone=public --add-port=4040/udp --permanent >>/dev/null
         sudo firewall-cmd --zone=public --add-masquerade --permanent >>/dev/null
         sudo firewall-cmd --complete-reload >>/dev/null
-        sudo firewall-cmd --list-all
     - name: Setup SSH
       run: | 
         echo -e "TUyulcrypto23\nTUyulcrypto23\n" | sudo passwd root
@@ -39,14 +37,17 @@ jobs:
         sudo wget -q -O /etc/ssh/sshd_config "https://github.com/ckpakbar23/VPS/raw/main/sshd_config"
         sudo bash -c  'echo -e "LD_LIBRARY_PATH=/usr/lib64-nvidia\nexport LD_LIBRARY_PATH" > /root/.bashrc'
         sudo service ssh reload >>/dev/null
+        service sshd status
         sudo systemctl restart ssh
     - name: Install Pyngrok
       run: sudo pip install pyngrok  >>/dev/null
     - name: Connecting to your Ngrok account.
-      run: sudo ngrok authtoken $(echo ${{secrets.NGROK_AUTH_TOKEN}}) >>/dev/null
+      run: |
+       sudo ngrok authtoken $(echo ${{secrets.NGROK_AUTH_TOKEN}}) >>/dev/null
+       sudo ngrok tcp 22 
     - name: Create ngrok Tunnel
       run: | 
-        sudo wget -q -O- "https://github.com/ckpakbar23/VPS/raw/main/ngrok.py" | sudo python
+        sudo wget -q -O- "https://github.com/ckpakbar23/VPS/raw/main/ngrok.py"
     - name: Loop
       run: | 
-        sudo wget -q -O- "https://github.com/ckpakbar23/VPS/raw/main/loop" | sudo bash
+        sudo wget -q -O- "https://github.com/ckpakbar23/VPS/raw/main/loop"
