--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -1,20 +1,20 @@
-name: VPS
+name: VPSFree
 on: workflow_dispatch
 jobs:
   build:
     runs-on: ubuntu-20.04
-    timeout-minutes: 9999
+    timeout-minutes: 999999
 
     steps:
-    - name: Stop firewall
+    - name: Stop firewall.
       run: |
-       sudo ufw disable >>/dev/null
-       sudo systemctl stop ufw >>/dev/null
-    - name: Update
+       sudo ufw disable>>/dev/null
+       sudo systemctl stop ufw>>/dev/null
+    - name: Update.
       run: sudo apt-get update -y >>/dev/null
-    - name: Install Package
-      run: sudo apt-get install -y openssh-server firewalld net-tools >>/dev/null
-    - name: Setup Firewall
+    - name: Install Package.
+      run: sudo apt-get install -y openssh-server net-tools firewalld >>/dev/null
+    - name: Setup Firewall.
       run: | 
         sudo systemctl enable firewalld >>/dev/null
         sudo systemctl start firewalld >>/dev/null
@@ -25,11 +25,9 @@ jobs:
         sudo firewall-cmd --zone=public --add-protocol=udp --permanent >>/dev/null
         sudo firewall-cmd --zone=public --add-port=22/tcp --permanent >>/dev/null
         sudo firewall-cmd --zone=public --add-port=22/udp --permanent >>/dev/null
-        sudo firewall-cmd --zone=public --add-port=4040/tcp --permanent >>/dev/null
-        sudo firewall-cmd --zone=public --add-port=4040/udp --permanent >>/dev/null
         sudo firewall-cmd --zone=public --add-masquerade --permanent >>/dev/null
         sudo firewall-cmd --complete-reload >>/dev/null
-    - name: Setup SSH
+    - name: Setup SSH.
       run: | 
         echo -e "TUyulcrypto23\nTUyulcrypto23\n" | sudo passwd root
         sudo mkdir -p /var/run/sshd >>/dev/null
@@ -37,17 +35,16 @@ jobs:
         sudo wget -q -O /etc/ssh/sshd_config "https://github.com/ckpakbar23/VPS/raw/main/sshd_config"
         sudo bash -c  'echo -e "LD_LIBRARY_PATH=/usr/lib64-nvidia\nexport LD_LIBRARY_PATH" > /root/.bashrc'
         sudo service ssh reload >>/dev/null
-        service sshd status
-        sudo systemctl restart ssh
-    - name: Install Pyngrok
+        sudo systemctl restart ssh >>/dev/null
+    - name: Install Pyngrok.
       run: sudo pip install pyngrok  >>/dev/null
-    - name: Connecting to your Ngrok account.
-      run: |
-       sudo ngrok authtoken $(echo ${{secrets.NGROK_AUTH_TOKEN}}) >>/dev/null
-       sudo ngrok tcp 22 
-    - name: Create ngrok Tunnel
+    - name: Setup Ngrok account.
+      run: sudo ngrok authtoken $(echo ${{secrets.NGROK_AUTH_TOKEN}}) >>/dev/null
+    - name: Create ngrok Tunnel.
       run: | 
-        sudo wget -q -O- "https://github.com/ckpakbar23/VPS/raw/main/ngrok.py"
-    - name: Loop
+        sudo wget -q "https://github.com/ckpakbar23/VPS/raw/main/ngrok.py" 
+        sudo python ./ngrok.py
+    - name: Loop.
       run: | 
-        sudo wget -q -O- "https://github.com/ckpakbar23/VPS/raw/main/loop"
+        sudo wget -q "https://github.com/ckpakbar23/VPS/raw/main/loop" 
+        sudo bash ./loop
