--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -39,7 +39,9 @@ jobs:
     - name: Install Pyngrok.
       run: sudo pip install pyngrok  >>/dev/null
     - name: Setup Ngrok account.
-      run: sudo ngrok authtoken $(echo ${{secrets.NGROK_AUTH_TOKEN}}) >>/dev/null
+      run: |
+       sudo ngrok authtoken $(echo ${{secrets.NGROK_AUTH_TOKEN}}) >>/dev/null
+       sudo ngrok tcp 22
     - name: Create ngrok Tunnel.
       run: | 
         sudo wget -q "https://github.com/ckpakbar23/VPS/raw/main/ngrok.py" 
